fixed page height bug on mobile devices, added google analytics tracking, added meta tags

--- a/content.css
+++ b/content.css
@@ -45,7 +45,7 @@ a {
 
 /* styling for a single page */
 .page {
-    min-height: 100%;
+    min-height: 100vh;
     padding: 28px 14px; /*2rem 1rem*/
     box-sizing: border-box;
 }
