--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 #home {
+    padding-top: 64px;
     background-color: rgb(240, 240, 240);
 }
 
